--- a/universityWeb/style.css
+++ b/universityWeb/style.css
@@ -175,3 +175,89 @@ h3{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
     cursor: pointer;
 }
+
+@media(max-width: 700px) {
+    .row{
+        flex-direction: column;
+    }
+    
+}
+
+.campus{
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    padding-top: 50px;
+}
+
+.campus-col{
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+.campus-col img{
+    width: 90%;
+    height: 90%;
+    border-radius: 10px;
+}
+
+.facilites{
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    padding-top: 30px;
+}
+.facilites-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+.facilites-col img{
+    width: 100%;
+    height: 90%;
+    border-radius: 10px;
+}
+
+.cta{
+    margin: 50px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)), url("meeting.jpg");
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 90px 0;
+}
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+.icons .fa-brands{
+    /* color: #88b8f0; */
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0 ;
+    font-size: 25px;
+}
